--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -4,14 +4,27 @@
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
   padding: 5px 3px;
+  font-weight: 500;
+  font-size: 14px;
 }
 .status-bar__column {
   width: 33%;
 }
+
+.status-bar__column:first-child span {
+  margin: 0 2px;
+}
+
 .status-bar__column:nth-child(2) {
   display: flex;
   justify-content: center;
+}
+
+.status-bar__column:nth-child(2) span {
+  font-weight: 700;
+  font-size: 15px;
 }
 
 .status-bar__column:last-child {
@@ -22,4 +35,8 @@
 
 .status-bar__column .fa-battery-full {
   margin: 0px 3px;
+}
+
+.status-bar__column .fa-bolt {
+  margin-right: 6px;
 }
