--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -6,9 +6,9 @@
 
 #login-form input {
   border: none;
-  padding: 15px 0;
-  font-size: 18px;
-  margin-bottom: 25px;
+  padding: 17px 0;
+  font-size: 17px;
+  font-weight: 500;
 }
 /*.login-form__input*/
 #login-form input:not([type="submit"]) {
@@ -24,12 +24,16 @@
 #login-form input[type="submit"] {
   background-color: var(--yellow);
   cursor: pointer;
-  padding: 20px 0;
+  padding: 16px 0;
   border-radius: 5px;
+}
+input:nth-child(3) {
+  margin: 27px 0 12px;
 }
 #login-form a {
   text-align: center;
   text-decoration: none;
   color: inherit;
   font-size: 13px;
+  margin-top: 20px;
 }
