--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
 
 @import "reset.css";
 @import "variables.css";
@@ -22,9 +22,9 @@
 @import "screens/chat.css";
 
 body {
-  height: 500vh;
+  height: 200vh;
   color: #2e363e;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .main-screen {
@@ -32,18 +32,21 @@ body {
 }
 
 .welcome-header {
-  margin: 90px 0;
+  margin: 110px 0 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-weight: 600;
 }
 .welcome-header__title {
-  margin-bottom: 20px;
-  font-size: 25px;
+  margin-bottom: 23px;
+  font-size: 23px;
+  font-weight: 600;
 }
 .welcome-header__text {
-  width: 60%;
-  opacity: 0.7;
+  width: 70%;
+  opacity: 0.6;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 18px;
 }
