--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -4,13 +4,14 @@
   bottom: 0;
   width: 100%;
   background-color: #f9f9fa;
-  padding: 20px 50px;
+  padding: 22px 50px;
   box-sizing: border-box;
   border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
 
 .nav i {
   width: 25%;
+  font-size: 28px;
 }
 
 .nav__list {
@@ -44,9 +45,9 @@
 }
 
 .nav__new {
-  background-color: tomato;
-  width: 8px;
-  height: 8px;
+  background-color: var(--blue);
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -69,17 +70,17 @@
 .nav__btn {
   transform: translateY(50px);
   opacity: 0;
-  animation: appearBtnAnimation 0.5s ease-in-out forwards;
+  animation: appearBtnAnimation 0.4s ease-in-out forwards;
 }
 
 .nav__btn:nth-child(2) {
-  animation-delay: 0.3s;
+  animation-delay: 0.1s;
 }
 
 .nav__btn:nth-child(3) {
-  animation-delay: 0.5s;
+  animation-delay: 0.2s;
 }
 
 .nav__btn:last-child {
-  animation-delay: 0.7s;
+  animation-delay: 0.3s;
 }
