--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -3,23 +3,24 @@
   justify-content: space-between;
   align-items: center;
   padding: 50px 25px 25px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  background-color: #f9f9fa;
 }
 
 .screen-header__title {
-  font-size: 32px;
-  font-weight: 600;
+  font-size: 28px;
+  font-weight: 700;
 }
 .screen-header__icons {
   position: relative;
 }
 
 .screen-header__icons span {
-  margin-left: 25px;
+  margin-left: 15px;
 }
 
 .find__new {
-  background-color: tomato;
+  background-color: var(--blue);
   width: 6px;
   height: 6px;
   border-radius: 50%;
