--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -1,5 +1,6 @@
 .user-component {
   justify-content: space-between;
+  margin-bottom: 25px;
 }
 
 .user-component,
@@ -11,13 +12,18 @@
 .user-component__avatar {
   width: 70px;
   height: 70px;
-  border-radius: 30px;
+  border-radius: 25px;
   margin-right: 20px;
 }
 
 .user-component__title {
   font-weight: 600;
-  font-size: 22px;
+  font-size: 21px;
+}
+
+.user-component__title i {
+  margin-left: 3px;
+  color: var(--gray);
 }
 
 .user-component__subtitle {
@@ -27,13 +33,14 @@
 }
 
 .user-component__subtitle i {
-  color: tomato;
+  color: var(--blue);
   margin-left: 3px;
 }
 
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
+  border-radius: 30px;
 }
 
 .user-component__avatar--sm {
@@ -43,7 +50,8 @@
 }
 
 .user-component__title--not-bold {
-  font-weight: 400;
+  font-weight: 500;
+  font-size: 19px;
 }
 
 .user-component__column:last-child {
@@ -51,9 +59,31 @@
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  font-size: 15px;
 }
 
 .user-component__time {
   display: block;
   margin-bottom: 10px;
+  font-size: 14px;
+}
+
+.user-component__music {
+  display: flex;
+  align-items: center;
+  border: 1.5px solid var(--blue);
+  border-radius: 15px;
+  padding: 5px 9px;
+  margin-right: -5px;
+}
+
+.user-component__music span {
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 13px;
+  font-weight: 500;
+}
+
+.user-component__music i {
+  margin-left: 6px;
+  color: var(--blue);
 }
