--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,6 +1,6 @@
 #chat-screen {
-  background-color: #abc1d1;
-  height: 500vh;
+  background-color: whitesmoke;
+  height: 100vh;
 }
 
 #chat-screen .alt-header {
@@ -9,7 +9,7 @@
   position: fixed;
   width: 100%;
   box-sizing: border-box;
-  background-color: #abc1d1;
+  background-color: whitesmoke;
 }
 #chat-screen .status-bar {
   z-index: 2;
@@ -39,12 +39,11 @@
 }
 
 .chat__timestamp {
-  color: white;
-  background-color: #92a4b2;
-  padding: 12px 17px;
+  background-color: var(--blue);
+  padding: 11px 16px;
   font-size: 14px;
-  border-radius: 25px;
-  margin-bottom: 25px;
+  border-radius: 30px;
+  margin-bottom: 32px;
 }
 
 .message-row {
@@ -65,16 +64,21 @@
   font-size: 15px;
   margin-bottom: 8px;
   display: block;
-  margin-left: 2px;
 }
 
 .message__bubble {
   background-color: white;
-  padding: 13px;
+  padding: 10px 13px;
   font-size: 17px;
-  border-radius: 15px;
+  border-radius: 16px;
   border-top-left-radius: 0px;
   margin-right: 5px;
+  margin-left: -3px;
+}
+
+.message__bubble_re {
+  margin-left: 66px;
+  margin-top: -13px;
 }
 
 .message__info {
@@ -84,7 +88,8 @@
 
 .message__time {
   opacity: 0.8;
-  font-size: 13px;
+  font-size: 12px;
+  margin-bottom: 3px;
 }
 
 .message-row--own {
@@ -92,7 +97,7 @@
 }
 
 .message-row--own .message__bubble {
-  background-color: var(--yellow);
+  background-color: var(--blue);
   border-top-right-radius: 0;
   border-top-left-radius: 15px;
   margin-right: 0px;
@@ -153,7 +158,7 @@
 }
 
 .reply__column button {
-  background-color: var(--yellow);
+  background-color: var(--blue);
   border: none;
   width: 30px;
   height: 30px;
