--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -6,23 +6,30 @@
 }
 
 .recommended-friends__title {
-  font-size: 14px;
+  font-size: 15px;
+  font-weight: 500;
   color: var(--gray);
+  margin-bottom: 30px;
 }
 
-.recommended-friends span {
-  margin: 100px 0;
-  display: block;
-  font-size: 18px;
-  text-align: center;
-  color: var(--gray);
+.fa-user-plus {
+  margin-right: 5px;
+  font-size: 17px;
+}
+
+.recommended-friends__subtitle {
+  margin-left: 3px;
+  font-size: 15px;
 }
 
 .open-chat__header {
   display: flex;
   justify-content: space-between;
   color: var(--gray);
-  margin-bottom: 25px;
+  margin-top: -5px;
+  margin-bottom: 20px;
+  font-size: 15px;
+  font-weight: 500;
 }
 
 .open-chat__header span {
@@ -35,13 +42,37 @@
   align-items: center;
 }
 
+.open-post:nth-child(2) {
+  padding: 0 0 14px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.open-post:nth-child(3) {
+  padding: 14px 0;
+  padding-bottom: 85px;
+}
+
 .open-post__title {
-  font-weight: 600;
+  font-size: 20px;
+  font-weight: 500;
   margin-bottom: 7px;
+}
+
+.open-post__jap h5 {
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.open-post__jap h6 {
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 16px;
+  opacity: 0.7;
 }
 
 .open-post__hashtags {
   text-transform: uppercase;
+  font-size: 16px;
   opacity: 0.6;
 }
 
@@ -52,25 +83,27 @@
 }
 
 .open-post__members img {
-  width: 20px;
-  height: 20px;
-  border-radius: 5px;
-  margin-right: 5px;
+  width: 24px;
+  height: 24px;
+  border-radius: 10px;
+  margin-right: 7px;
 }
 
 .open-post__member-count {
-  font-size: 14px;
-  opacity: 0.5;
+  font-size: 15px;
+  opacity: 0.6;
 }
 
 .open-post__members .divider {
   width: 1.5px;
   height: 15px;
-  margin: 0 5px;
+  margin: 0 6px;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
 .open-post__member-status {
+  font-size: 15px;
+  font-weight: 500;
   color: #ff77c9;
 }
 
