--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,6 +1,6 @@
 #friends-display-link {
   background-color: #fafafa;
-  padding: 20px 0;
+  padding: 17px 0;
   text-align: center;
   font-size: 18px;
   display: block;
@@ -23,10 +23,12 @@
 }
 
 .friends-screen__channel-header {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   color: var(--gray);
+  font-size: 14px;
+  font-weight: 500;
 }
 
 @keyframes hideSplashScreen {
