--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -3,21 +3,28 @@
 }
 
 .more-suggestions {
-  margin-top: 50px;
+  margin-top: 40px;
   border-top: var(--main-border);
-  padding-top: 40px;
+  padding-top: 25px;
 }
 
 .more-suggestions__title {
-  margin-bottom: 30px;
+  margin-bottom: 23px;
+  margin-left: 7px;
+  font-weight: 500;
 }
 
 .more-suggestions__icons {
   display: flex;
 }
 
+.more-suggestions__icon:first-child {
+  margin-left: 10px;
+  margin-right: 28px;
+}
+
 .more-suggestions__icon {
-  margin-right: 30px;
+  margin-right: 25px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,4 +35,11 @@
   height: 60px;
   border-radius: 10px;
   margin-bottom: 10px;
+}
+
+.more-suggestions__icon-text {
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  opacity: 0.6;
 }
