--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400;500;700&display=swap");
 
 @import "reset.css";
 @import "variables.css";
@@ -22,7 +23,7 @@
 @import "screens/chat.css";
 
 body {
-  height: 200vh;
+  display: 130vh;
   color: #2e363e;
   font-family: "Noto Sans", sans-serif;
 }
@@ -49,4 +50,11 @@ body {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
+}
+
+.jap {
+  font-family: "Zen Maru Gothic", sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  margin-left: 2px;
 }
