--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -9,7 +9,7 @@
   position: fixed;
   width: 100%;
   box-sizing: border-box;
-  background-color: whitesmoke;
+  background-color: #f9f9fa;
 }
 #chat-screen .status-bar {
   z-index: 2;
