--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -1,10 +1,10 @@
 #friends-display-link {
-  background-color: #fafafa;
-  padding: 17px 0;
+  background-color: whitesmoke;
+  padding: 16px 0;
   text-align: center;
   font-size: 18px;
   display: block;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
   margin-top: -10px;
 }
 
